Fix sidebar collapse toggle buttons to min-width to prevent resizing

--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -13,6 +13,11 @@ body {
 
 .dashSidebarFilter {
     cursor: pointer;
+    font-size: .8rem;
+}
+
+.showServerInstances, .toggleDropdown {
+    min-width: 27px;
 }
 
 .filterHostsInstances {
